--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-validator": "^3.2.0",
     "mustache-express": "^1.2.5",
     "pg": "^6.4.0",
     "sequelize": "^4.2.0"
